<resources>
    <string name="app_name">AlarmClock</string>

    <string name="add_alarm_short">Add alarm</string>
    <string name="start_stopwatch_short">Start stopwatch</string>
    <string name="set_hourglass_short">Set hourglass</string>
    <string name="menu_settings">Settings</string>
    <string name="menu_help">Help</string>
    <string name="info_popup_menu">Popup menu</string>
    <string name="hint_alarm_name">Alarm name</string>
    <string name="add_alarm_save">Save</string>
    <string name="alarm_repeat">Repeat</string>
    <string name="add_alarm_vibrations">Vibrations</string>
    <string name="time">%1$d:%2$d</string>
    <string name="select_ringtone_dialog_title">Select ringtone</string>
    <string name="permission_ringtone">This permission is required to select ringtone</string>
    <string name="add_alarm_fail">Could not create alarm</string>
    <string name="alarm_remove">Remove</string>
    <string name="alarm_vibrations">Vibrations</string>
    <string name="add_alarm_set_title">SET TITLE</string>
    <string name="dialog_remove_title">Are you sure ?</string>
    <string name="dialog_remove_message">Do you want to remove this alarm ?</string>
    <string name="dialog_rename_title">Set title of the alarm</string>
    <string name="notification_alarm_text">Time to wake up! It is %1$s</string>
    <string name="channel_priority_name">Current alarms or timer</string>
    <string name="channel_priority_description">Displays currently ringing alarm or timer</string>
    <string name="item_alarm_temperature_very_cold">Very cold</string>
    <string name="item_alarm_temperature_cold">Cold</string>
    <string name="item_alarm_temperature_hot">Hot</string>
    <string name="item_alarm_temperature_very_hot">Very hot</string>
    <string name="item_alarm_temperature_ok">OK</string>
    <string name="item_alarm_rain_no">No rain</string>
    <string name="item_alarm_rain_heavy_rain">Heavy rain</string>
    <string name="item_alarm_rain_will_rain">Raining</string>
    <string name="item_alarm_rain_may_rain">May rain</string>
    <string name="item_alarm_snow_no">No snow</string>
    <string name="item_alarm_snow_heavy_snow">Heavy snow</string>
    <string name="item_alarm_snow_snowy">Snowy</string>
    <string name="item_alarm_wind_no">Normal wind</string>
    <string name="item_alarm_wind_very_windy">Very windy</string>
    <string name="item_alarm_wind_windy">Windy</string>
    <string name="add_alarm_nfc">Use NFC</string>
    <string name="ringing_alarm_snoozed_succesfully">Alarm snoozed</string>
    <string name="ringing_alarm_snoozed_unsuccesfully">Alarm cannot be snoozed</string>
    <string name="nfc_enable_dialog_title">Turn on NFC</string>
    <string name="nfc_enable_dialog_message">To turn off alarm you need to turn on NFC in settings. Do you want to open settings?</string>
    <string name="nfc_enable_dialog_open_settings">OPEN SETTINGS</string>

    <string name="settings_units_title">Temperature units</string>
    <string name="settings_city_title">Forecast for city</string>
    <string name="settings_mobile_data_title">Use mobile data</string>
    <string name="settings_mobile_data_summary">Mobile data will be used to download forecast</string>
    <string name="notification_location_text">Obtaining your localization to download forecast</string>
    <string name="channel_location_name">Obtains your localication</string>
    <string name="channel_location_description">Only visible when user requests to download forecast for current localization</string>
    <string name="dialog_gps_enable_title">Enable gps</string>
    <string name="dialog_gps_enable_message">To obtain your localication you need to enable GPS. Should we open settings?</string>
    <string name="gps_dialog_open_settings">Open settings</string>
    <string-array name="settings_units_titles">
        <item>Celsius</item>
        <item>Fahrenheit</item>
    </string-array>
    <string-array name="settings_units_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <string name="settings_snooze_time_title">Snooze time</string>
    <string-array name="settings_snooze_time_titles">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
        <item>8 minutes</item>
        <item>10 minutes</item>
        <item>15 minutes</item>
        <item>20 minutes</item>
        <item>25 minutes</item>
        <item>30 minutes</item>
    </string-array>
    <string-array name="settings_snooze_time_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>8</item>
        <item>10</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>


    <string-array name="settings_no_snoozes_titles">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>
    <string-array name="settings_no_snoozes_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>20</item>
        <item>25</item>
        <item>30</item>
    </string-array>

    <string name="settings_alarm_time_title">Alarm time</string>
    <string name="settings_alarm_time_summary">How long alarm should ring</string>
    <string name="timer_remove">Remove</string>
    <string name="notification_timer_text">Left %1$s</string>
    <string name="channel_timer_name">Timer</string>
    <string name="channel_timer_description">It is used when timer is running in the background</string>
    <string name="timer_stop">Finish alarm</string>
    <string name="notification_timer_text_finished">Time is up</string>
    <string name="notification_timer_pause">Pause</string>
    <string name="notification_timer_add_minute">Add minute</string>
    <string name="notification_timer_restart">Restart timer</string>
    <string name="notification_timer_paused_text">Timer is paused, %1$s seconds left</string>
    <string name="notification_timer_stop">Finish</string>
    <string name="timer_reset">Reset</string>
    <string name="channel_stopwatch_name">Stopwatch</string>
    <string name="channel_stopwatch_description">Displays currently running stopwatch</string>
    <string name="notification_stopwatch_pause">Pause</string>
    <string name="notification_stopwatch_take_lap">Lap</string>
    <string name="notification_stopwatch_resume">Resume</string>
    <string name="notification_stopwatch_reset">Reset</string>
    <string name="stopwatch_reset">Reset</string>
    <string name="stopwatch_lap">Lap</string>
    <string name="menu_statistics">Statistics</string>
    <string name="notification_initialization">Alarms are setting up after restart</string>
    <string name="notification_channel_initialization_name">Displays initialization message</string>
    <string name="notification_channel_initialization_description">It shows informations during configuration</string>
    <string name="notification_alarm_snooze">Snooze</string>
    <string name="notification_alarm_stop">Stop</string>
    <string name="ringing_current_temperature">Current temperature</string>
    <string name="ringing_later_temperature">Temperature later</string>
    <string name="ringing_rain">It will rain</string>
    <string name="ringing_snow">It will snow</string>
    <string name="ringing_wind">It will be windy</string>
    <string name="weather_celcius">C</string>
    <string name="weather_fahrenheit">F</string>
    <string name="weather_rain_metric">mm/3h</string>
    <string name="weather_wind_metric">m/s</string>
    <string name="weather_wind_imperial">mil/h</string>
    <string name="failure_could_not_remove_alarm">Could not remove alarm</string>
    <string name="failure_could_not_obtain_alarms">Could not obtain alarm</string>
    <string name="failure_could_not_switch_off">Problem occurred when turning off</string>
    <string name="failure_could_not_switch_on">Problem occurred when turning on</string>
    <string name="message_alarm_removed">Alarm removed successfully</string>
    <string name="message_alarm_switched">Alarm will start in %1$s</string>
    <string name="failure_generic">Some error occurred</string>
    <string name="timer_notification">Timer</string>
    <string name="stopwatch_notification">Stopwatch</string>
    <string name="location_notification">Obtaining localization</string>
    <string name="alarm_notification">Alarm</string>

    <string-array name="settings_alarm_time_titles">
        <item>1 minute</item>
        <item>2 minutes</item>
        <item>3 minutes</item>
        <item>4 minutes</item>
        <item>5 minutes</item>
    </string-array>
    <string-array name="settings_alarm_time_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>

</resources>
