<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">

	<shortcut
			android:shortcutId="add_alarm"
			android:icon="@drawable/ic_alarm"
			android:enabled="true"
			android:shortcutShortLabel="@string/add_alarm_short">

		<intent
				android:action="com.helpfulapps.alarmclock.addAlarm"
				android:targetClass="com.helpfulapps.alarmclock.MainActivity"
				android:targetPackage="com.helpfulapps.alarmclock" />

	</shortcut>

	<shortcut
			android:shortcutId="start_stopwatch"
			android:icon="@drawable/ic_stopwatch"
			android:enabled="true"
			android:shortcutShortLabel="@string/start_stopwatch_short">

		<intent
				android:action="com.helpfulapps.alarmclock.startStopwatch"
				android:targetClass="com.helpfulapps.alarmclock.MainActivity"
				android:targetPackage="com.helpfulapps.alarmclock" />

	</shortcut>

	<shortcut
			android:shortcutId="set_hourglass"
			android:icon="@drawable/ic_hourglass"
			android:enabled="true"
			android:shortcutShortLabel="@string/set_hourglass_short">

		<intent
				android:action="com.helpfulapps.alarmclock.setHourglass"
				android:targetClass="com.helpfulapps.alarmclock.MainActivity"
				android:targetPackage="com.helpfulapps.alarmclock" />

	</shortcut>

</shortcuts>